<resources>
    <string name="app_name">Money Veo</string>
    <string name="progress_text">Выполняется…</string>
    <string name="snack_bar_button">OK</string>
    <string name="dialog_ok">ОК</string>

    <!-- login -->
    <string name="login_title">Авторизация</string>
    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Пароль</string>
    <string name="login_button">Авторизоваться</string>
    <string name="login_forget_button"><u>Забыли пароль?</u></string>

    <string name="login_error_field_empty">Заполните поле</string>
    <string name="login_error_email_wrong">Неверный формат email</string>
    <string name="login_error_password">Неверный формат поля Пароль. Пароль должен содержать не менее 6 символов, цифры и буквы.</string>

    <string name="login_aler_header">Авторизация</string>
    <string name="login_dialog_success_message">Вы успешно авторизованны в системе</string>
    <string name="login_dialog_forget_message">Вы будете перенаправленны на страницу восстановления пароля</string>

    <string name="login_no_acc_label">У вас нет аккаунта?</string>
    <string name="login_register_button"><u>Регистрация</u></string>
    <string name="login_toolbar">Вход в аккаунт</string>

    <!-- login menu -->
    <string name="menu_fill_presets">Автозаполнение формы</string>
    <string name="menu_delete_presets">Очистить форму</string>

    <!--main -->
    <string name="main_subtitle">Получить онлайн кредит на Вашу карту\nстало намного проще и быстрее!</string>
    <string name="main_title">мгновенный кредит онлайн</string>
    <string name="main_login_button">войти</string>
    <string name="main_register_button">зарегистрироваться</string>

    <!-- registration alert -->
    <string name="no_reg_title">Регистрация</string>
    <string name="no_reg_message">Регистрация не реализована в данной версии приложения. Вы можете зарегистрироваться на нашем сайте.</string>


</resources>
